feat: add comprehensive deployment infrastructure and update SMTP configuration to a custom server.

--- a/deployment/6-services/.env.beat-worker
+++ b/deployment/6-services/.env.beat-worker
@@ -1,8 +1,8 @@
 # ==============================================================================
-# Plane Celery Worker - Environment Configuration
+# Plane Celery Beat Scheduler - Environment Configuration
 # ==============================================================================
-# This file contains environment variables for Celery background workers
-# Handles: emails, webhooks, notifications, imports/exports, file processing
+# This file contains environment variables for Celery Beat (scheduled tasks)
+# Handles: cleanup jobs, recurring notifications, cron jobs, scheduled maintenance
 #
 # SECURITY: Keep this file secure and NEVER commit to version control!
 # ==============================================================================
@@ -47,52 +47,6 @@ RABBITMQ_VHOST=plane
 RABBITMQ_HOST=plane-rabbitmq
 RABBITMQ_PORT=5672
 CELERY_BROKER_URL=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@${RABBITMQ_HOST}:${RABBITMQ_PORT}/${RABBITMQ_VHOST}
-
-# ==============================================================================
-# FILE STORAGE (MinIO/S3) - REQUIRED
-# ==============================================================================
-# Must match values from .env.infra and .env.api
-USE_MINIO=1
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=fHr_yxVxIsgYxs479hf_Tzf74cM
-AWS_SECRET_ACCESS_KEY=Cg28nyvS0HVe6Ph7ovUmx2xBPQi3NrW56oOVQcbw5Y27RsTHI81tTw
-AWS_S3_ENDPOINT_URL=http://plane-minio:9000
-AWS_S3_BUCKET_NAME=uploads
-MINIO_ENDPOINT_SSL=0
-
-# ==============================================================================
-# EMAIL CONFIGURATION - REQUIRED (for sending emails from worker)
-# ==============================================================================
-EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-
-# Custom SMTP Server Configuration
-EMAIL_HOST=mail.mohdop.com
-EMAIL_PORT=587
-EMAIL_USE_TLS=1
-EMAIL_HOST_USER=zidane@mohdop.com
-EMAIL_HOST_PASSWORD=123
-
-# From Email Address
-DEFAULT_FROM_EMAIL=zidane@mohdop.com
-
-# ==============================================================================
-# APPLICATION URLS - REQUIRED (for generating links in emails)
-# ==============================================================================
-WEB_URL=https://plane.mohdop.com
-API_BASE_URL=https://plane-api.mohdop.com
-
-# ==============================================================================
-# AI INTEGRATION (OpenAI) - OPTIONAL (for background AI tasks)
-# ==============================================================================
-# Must match values from .env.api if using AI features
-OPENAI_API_KEY=your-openai-api-key-here
-GPT_ENGINE=gpt-4
-
-# ==============================================================================
-# MONITORING - OPTIONAL
-# ==============================================================================
-SENTRY_DSN=
-SENTRY_ENVIRONMENT=production
 
 # ==============================================================================
 # PYTHON ENVIRONMENT
