--- a/deployment/consolidated/.env.backend
+++ b/deployment/consolidated/.env.backend
@@ -1,101 +1,114 @@
 # ==============================================================================
-# Plane Celery Worker - Environment Configuration
+# Plane Backend - Environment Configuration (CONSOLIDATED)
 # ==============================================================================
-# This file contains environment variables for Celery background workers
-# Handles: emails, webhooks, notifications, imports/exports, file processing
+# This single file configures ALL backend services:
+# - API, Worker, Beat Worker, Live Server
 #
 # SECURITY: Keep this file secure and NEVER commit to version control!
 # ==============================================================================
 
 # ==============================================================================
-# DJANGO CONFIGURATION - REQUIRED
+# TRAEFIK ROUTING (Dokploy)
 # ==============================================================================
-# CRITICAL: Must match SECRET_KEY from .env.api!
+API_DOMAIN=plane-api.mohdop.com
+FRONTEND_DOMAIN=plane.mohdop.com
+
+# ==============================================================================
+# DJANGO CONFIGURATION (API + Workers)
+# ==============================================================================
 SECRET_KEY=LtBkbgDqp-ZUlhkBjoO3kH6ftJpj6TcXR_w5HhKVsezQ_qK52pxAAUXokyJlwOUUh_U
 DEBUG=0
 DJANGO_SETTINGS_MODULE=plane.settings.production
 
 # ==============================================================================
-# DATABASE CONFIGURATION - REQUIRED
+# DATABASE (All backend services)
 # ==============================================================================
-# Must match values from .env.infra and .env.api
 POSTGRES_USER=plane
 POSTGRES_PASSWORD=ajMeB9eLtQSBfZS_vz4R1ELZE9n34KL3RzhhoK4EqJg
 POSTGRES_DB=plane
-
-# PostgreSQL Connection
-PGUSER=${POSTGRES_USER}
-PGPASSWORD=${POSTGRES_PASSWORD}
+DATABASE_URL=postgresql://plane:ajMeB9eLtQSBfZS_vz4R1ELZE9n34KL3RzhhoK4EqJg@plane-postgres:5432/plane
+PGUSER=plane
+PGPASSWORD=ajMeB9eLtQSBfZS_vz4R1ELZE9n34KL3RzhhoK4EqJg
 PGHOST=plane-postgres
-PGDATABASE=${POSTGRES_DB}
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@plane-postgres:5432/${POSTGRES_DB}
+PGDATABASE=plane
 
 # ==============================================================================
-# REDIS CONFIGURATION - REQUIRED
+# REDIS (All backend services)
 # ==============================================================================
 REDIS_HOST=plane-redis
 REDIS_PORT=6379
-REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/
+REDIS_URL=redis://plane-redis:6379/
 
 # ==============================================================================
-# RABBITMQ & CELERY CONFIGURATION - REQUIRED
+# RABBITMQ & CELERY (API + Workers)
 # ==============================================================================
-# Must match values from .env.infra and .env.api
 RABBITMQ_USER=plane
 RABBITMQ_PASSWORD=lnI5L_985_Ikx6w6l73D9_XeS9m361SCetuBp_UwjBU
 RABBITMQ_VHOST=plane
 RABBITMQ_HOST=plane-rabbitmq
 RABBITMQ_PORT=5672
-CELERY_BROKER_URL=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@${RABBITMQ_HOST}:${RABBITMQ_PORT}/${RABBITMQ_VHOST}
+CELERY_BROKER_URL=amqp://plane:lnI5L_985_Ikx6w6l73D9_XeS9m361SCetuBp_UwjBU@plane-rabbitmq:5672/plane
 
 # ==============================================================================
-# FILE STORAGE (MinIO/S3) - REQUIRED
+# APPLICATION URLS
 # ==============================================================================
-# Must match values from .env.infra and .env.api
+WEB_URL=https://plane.mohdop.com
+API_BASE_URL=https://plane-api.mohdop.com
+ADMIN_BASE_URL=https://plane.mohdop.com
+ADMIN_BASE_PATH=/god-mode
+SPACE_BASE_URL=https://plane.mohdop.com
+SPACE_BASE_PATH=/spaces
+LIVE_BASE_URL=https://plane.mohdop.com
+LIVE_BASE_PATH=/live
+
+# ==============================================================================
+# CORS
+# ==============================================================================
+CORS_ALLOWED_ORIGINS=https://plane.mohdop.com
+
+# ==============================================================================
+# FILE STORAGE (MinIO)
+# ==============================================================================
 USE_MINIO=1
-AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=fHr_yxVxIsgYxs479hf_Tzf74cM
 AWS_SECRET_ACCESS_KEY=Cg28nyvS0HVe6Ph7ovUmx2xBPQi3NrW56oOVQcbw5Y27RsTHI81tTw
+AWS_REGION=us-east-1
 AWS_S3_ENDPOINT_URL=http://plane-minio:9000
 AWS_S3_BUCKET_NAME=uploads
+FILE_SIZE_LIMIT=5242880
 MINIO_ENDPOINT_SSL=0
 
 # ==============================================================================
-# EMAIL CONFIGURATION - REQUIRED (for sending emails from worker)
+# GUNICORN
+# ==============================================================================
+GUNICORN_WORKERS=2
+
+# ==============================================================================
+# EMAIL (API + Worker)
 # ==============================================================================
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-
-# Custom SMTP Server Configuration
 EMAIL_HOST=mail.mohdop.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=1
 EMAIL_HOST_USER=zidane@mohdop.com
 EMAIL_HOST_PASSWORD=123
-
-# From Email Address
 DEFAULT_FROM_EMAIL=zidane@mohdop.com
 
 # ==============================================================================
-# APPLICATION URLS - REQUIRED (for generating links in emails)
+# SECURITY
 # ==============================================================================
-WEB_URL=https://plane.mohdop.com
-API_BASE_URL=https://plane-api.mohdop.com
+ALLOWED_HOSTS=plane-api.mohdop.com,localhost
+SESSION_COOKIE_SECURE=1
+CSRF_COOKIE_SECURE=1
 
 # ==============================================================================
-# AI INTEGRATION (OpenAI) - OPTIONAL (for background AI tasks)
+# AI INTEGRATION (OpenAI)
 # ==============================================================================
-# Must match values from .env.api if using AI features
 OPENAI_API_KEY=your-openai-api-key-here
 GPT_ENGINE=gpt-4
 
 # ==============================================================================
-# MONITORING - OPTIONAL
-# ==============================================================================
-SENTRY_DSN=
-SENTRY_ENVIRONMENT=production
-
-# ==============================================================================
-# PYTHON ENVIRONMENT
+# PYTHON
 # ==============================================================================
 PYTHONUNBUFFERED=1
 PYTHONDONTWRITEBYTECODE=1
