--- a/.env.worker
+++ b/.env.worker
@@ -49,16 +49,32 @@ RABBITMQ_PORT=5672
 CELERY_BROKER_URL=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@${RABBITMQ_HOST}:${RABBITMQ_PORT}/${RABBITMQ_VHOST}
 
 # ==============================================================================
-# FILE STORAGE (MinIO/S3) - REQUIRED
+# FILE STORAGE - S3-Compatible (Choose ONE provider)
 # ==============================================================================
-# Must match values from .env.infra and .env.api
-USE_MINIO=1
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=fHr_yxVxIsgYxs479hf_Tzf74cM
-AWS_SECRET_ACCESS_KEY=Cg28nyvS0HVe6Ph7ovUmx2xBPQi3NrW56oOVQcbw5Y27RsTHI81tTw
-AWS_S3_ENDPOINT_URL=http://plane-minio:9000
-AWS_S3_BUCKET_NAME=uploads
-MINIO_ENDPOINT_SSL=0
+
+# --- ACTIVE: Digital Ocean Spaces ---
+USE_MINIO=0
+AWS_ACCESS_KEY_ID=DO801XJ672NTVLANA8G4
+AWS_SECRET_ACCESS_KEY=XinIAu3yMGJtOWUtvbOjY97j4rt6v5R5hk6RCpEWt6c
+AWS_REGION=blr1
+AWS_S3_ENDPOINT_URL=https://blr1.digitaloceanspaces.com
+AWS_S3_BUCKET_NAME=plane-agent-coding
+
+# --- OPTION: AWS S3 ---
+# USE_MINIO=0
+# AWS_ACCESS_KEY_ID=your-aws-access-key
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+# AWS_REGION=us-east-1
+# AWS_S3_ENDPOINT_URL=https://s3.us-east-1.amazonaws.com
+# AWS_S3_BUCKET_NAME=your-bucket-name
+
+# --- OPTION: MinIO (Self-hosted) ---
+# USE_MINIO=1
+# AWS_ACCESS_KEY_ID=your-minio-access-key
+# AWS_SECRET_ACCESS_KEY=your-minio-secret-key
+# AWS_REGION=us-east-1
+# AWS_S3_ENDPOINT_URL=http://plane-minio:9000
+# AWS_S3_BUCKET_NAME=uploads
 
 # ==============================================================================
 # EMAIL CONFIGURATION - REQUIRED (for sending emails from worker)
