--- a/deployment/6-services/.env.api
+++ b/deployment/6-services/.env.api
@@ -80,21 +80,38 @@ LIVE_BASE_PATH=/live
 CORS_ALLOWED_ORIGINS=https://plane.mohdop.com
 
 # ==============================================================================
-# FILE STORAGE (MinIO/S3) - REQUIRED
+# FILE STORAGE - S3-Compatible (Choose ONE provider)
 # ==============================================================================
-# Use MinIO for self-hosted storage
-USE_MINIO=1
+# Supported: Digital Ocean Spaces, AWS S3, MinIO (self-hosted)
+# Uncomment ONE section below and comment out the others
+# ==============================================================================
 
-# AWS/MinIO Credentials (must match .env.infra)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=fHr_yxVxIsgYxs479hf_Tzf74cM
-AWS_SECRET_ACCESS_KEY=Cg28nyvS0HVe6Ph7ovUmx2xBPQi3NrW56oOVQcbw5Y27RsTHI81tTw
+# --- ACTIVE: Digital Ocean Spaces ---
+USE_MINIO=0
+AWS_ACCESS_KEY_ID=DO801XJ672NTVLANA8G4
+AWS_SECRET_ACCESS_KEY=XinIAu3yMGJtOWUtvbOjY97j4rt6v5R5hk6RCpEWt6c
+AWS_REGION=blr1
+AWS_S3_ENDPOINT_URL=https://blr1.digitaloceanspaces.com
+AWS_S3_BUCKET_NAME=plane-agent-coding
 
-# MinIO Configuration
-AWS_S3_ENDPOINT_URL=http://plane-minio:9000
-AWS_S3_BUCKET_NAME=uploads
+# --- OPTION: AWS S3 ---
+# USE_MINIO=0
+# AWS_ACCESS_KEY_ID=your-aws-access-key
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+# AWS_REGION=us-east-1
+# AWS_S3_ENDPOINT_URL=https://s3.us-east-1.amazonaws.com
+# AWS_S3_BUCKET_NAME=your-bucket-name
+
+# --- OPTION: MinIO (Self-hosted) ---
+# USE_MINIO=1
+# AWS_ACCESS_KEY_ID=your-minio-access-key
+# AWS_SECRET_ACCESS_KEY=your-minio-secret-key
+# AWS_REGION=us-east-1
+# AWS_S3_ENDPOINT_URL=http://plane-minio:9000
+# AWS_S3_BUCKET_NAME=uploads
+# MINIO_ENDPOINT_SSL=0
+
 FILE_SIZE_LIMIT=5242880
-MINIO_ENDPOINT_SSL=0
 
 # ==============================================================================
 # GUNICORN WEB SERVER - OPTIONAL
