feat: Adjust Docker build context paths in compose files and comment out MinIO services.

--- a/deployment/6-services/docker-compose.api.yml
+++ b/deployment/6-services/docker-compose.api.yml
@@ -19,7 +19,7 @@ services:
   api:
     container_name: plane-api
     build:
-      context: ./apps/api
+      context: ../../apps/api
       dockerfile: Dockerfile.api
       args:
         DOCKER_BUILDKIT: 1
