--- a/deployment/6-services/docker-compose.worker.yml
+++ b/deployment/6-services/docker-compose.worker.yml
@@ -19,7 +19,7 @@ services:
   worker:
     container_name: plane-worker
     build:
-      context: ./apps/api
+      context: ../../apps/api
       dockerfile: Dockerfile.api
       args:
         DOCKER_BUILDKIT: 1
