--- a/deployments/cli/community/build.yml
+++ b/deployments/cli/community/build.yml
@@ -2,35 +2,35 @@ services:
   web:
     image: ${DOCKERHUB_USER:-local}/plane-frontend:${APP_RELEASE:-latest}
     build:
-      context: ../../
+      context: ../../../
       dockerfile: apps/web/Dockerfile.web
 
   space:
     image: ${DOCKERHUB_USER:-local}/plane-space:${APP_RELEASE:-latest}
     build:
-      context: ../../
+      context: ../../../
       dockerfile: apps/space/Dockerfile.space
 
   admin:
     image: ${DOCKERHUB_USER:-local}/plane-admin:${APP_RELEASE:-latest}
     build:
-      context: ../../
+      context: ../../../
       dockerfile: apps/admin/Dockerfile.admin
 
   live:
     image: ${DOCKERHUB_USER:-local}/plane-live:${APP_RELEASE:-latest}
     build:
-      context: ../../
+      context: ../../../
       dockerfile: apps/live/Dockerfile.live
 
   api:
     image: ${DOCKERHUB_USER:-local}/plane-backend:${APP_RELEASE:-latest}
     build:
-      context: ../../apps/api
+      context: ../../../apps/api
       dockerfile: Dockerfile.api
 
   proxy:
     image: ${DOCKERHUB_USER:-local}/plane-proxy:${APP_RELEASE:-latest}
     build:
-      context: ../../apps/proxy
+      context: ../../../apps/proxy
       dockerfile: Dockerfile.ce
