refactor: comment out MinIO configuration from infrastructure environment files, clarifying S3/DO Spaces credentials are in API/Worker environments.

--- a/deployment/6-services/.env.infra
+++ b/deployment/6-services/.env.infra
@@ -42,15 +42,19 @@ RABBITMQ_MANAGEMENT_PORT=15672
 # ==============================================================================
 # MinIO S3-Compatible Object Storage Configuration
 # ==============================================================================
-AWS_ACCESS_KEY_ID=fHr_yxVxIsgYxs479hf_Tzf74cM
-AWS_SECRET_ACCESS_KEY=Cg28nyvS0HVe6Ph7ovUmx2xBPQi3NrW56oOVQcbw5Y27RsTHI81tTw
-AWS_REGION=us-east-1
-AWS_S3_BUCKET_NAME=uploads
+# COMMENTED OUT: Using Digital Ocean Spaces instead
+# MinIO credentials are not needed in infra env file when using cloud storage
+# S3/DO Spaces credentials are configured in API and Worker env files
+# ==============================================================================
+# AWS_ACCESS_KEY_ID=fHr_yxVxIsgYxs479hf_Tzf74cM
+# AWS_SECRET_ACCESS_KEY=Cg28nyvS0HVe6Ph7ovUmx2xBPQi3NrW56oOVQcbw5Y27RsTHI81tTw
+# AWS_REGION=us-east-1
+# AWS_S3_BUCKET_NAME=uploads
 
-# MinIO Connection Details
-MINIO_HOST=plane-minio
-MINIO_PORT=9000
-MINIO_CONSOLE_PORT=9001
+# MinIO Connection Details (only needed if using self-hosted MinIO)
+# MINIO_HOST=plane-minio
+# MINIO_PORT=9000
+# MINIO_CONSOLE_PORT=9001
 
 # ==============================================================================
 # Docker Volumes (for backup/restore operations)
@@ -58,7 +62,7 @@ MINIO_CONSOLE_PORT=9001
 POSTGRES_VOLUME=plane-postgres-data
 REDIS_VOLUME=plane-redis-data
 RABBITMQ_VOLUME=plane-rabbitmq-data
-MINIO_VOLUME=plane-minio-data
+# MINIO_VOLUME=plane-minio-data  # Not needed when using DO Spaces/AWS S3
 
 # ==============================================================================
 # Networking
