--- a/deployment/consolidated/.env.infra
+++ b/deployment/consolidated/.env.infra
@@ -1,2 +1,76 @@
-# Same as 6-services infra
-# Copy from deployment/6-services/.env.infra
+# ==============================================================================
+# Plane Infrastructure Services - Environment Configuration
+# ==============================================================================
+# This file contains environment variables for infrastructure services:
+# - PostgreSQL, Redis, RabbitMQ
+#
+# SECURITY: Keep this file secure and NEVER commit to version control!
+# ==============================================================================
+
+# ==============================================================================
+# PostgreSQL Database Configuration
+# ==============================================================================
+POSTGRES_USER=plane
+POSTGRES_PASSWORD=ajMeB9eLtQSBfZS_vz4R1ELZE9n34KL3RzhhoK4EqJg
+POSTGRES_DB=plane
+PGDATA=/var/lib/postgresql/data
+
+# PostgreSQL Connection Details (for external access if needed)
+POSTGRES_HOST=plane-postgres
+POSTGRES_PORT=5432
+POSTGRES_MAX_CONNECTIONS=1000
+
+# ==============================================================================
+# Redis Cache Configuration
+# ==============================================================================
+REDIS_HOST=plane-redis
+REDIS_PORT=6379
+# REDIS_PASSWORD=                      # Optional - uncomment if you want password protection
+
+# ==============================================================================
+# RabbitMQ Message Broker Configuration
+# ==============================================================================
+RABBITMQ_USER=plane
+RABBITMQ_PASSWORD=lnI5L_985_Ikx6w6l73D9_XeS9m361SCetuBp_UwjBU
+RABBITMQ_VHOST=plane
+
+# RabbitMQ Connection Details
+RABBITMQ_HOST=plane-rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_MANAGEMENT_PORT=15672
+
+# ==============================================================================
+# MinIO S3-Compatible Object Storage Configuration
+# ==============================================================================
+# COMMENTED OUT: Using Digital Ocean Spaces instead
+# MinIO credentials are not needed in infra env file when using cloud storage
+# S3/DO Spaces credentials are configured in API and Worker env files
+# ==============================================================================
+# AWS_ACCESS_KEY_ID=fHr_yxVxIsgYxs479hf_Tzf74cM
+# AWS_SECRET_ACCESS_KEY=Cg28nyvS0HVe6Ph7ovUmx2xBPQi3NrW56oOVQcbw5Y27RsTHI81tTw
+# AWS_REGION=us-east-1
+# AWS_S3_BUCKET_NAME=uploads
+
+# MinIO Connection Details (only needed if using self-hosted MinIO)
+# MINIO_HOST=plane-minio
+# MINIO_PORT=9000
+# MINIO_CONSOLE_PORT=9001
+
+# ==============================================================================
+# Docker Volumes (for backup/restore operations)
+# ==============================================================================
+POSTGRES_VOLUME=plane-postgres-data
+REDIS_VOLUME=plane-redis-data
+RABBITMQ_VOLUME=plane-rabbitmq-data
+# MINIO_VOLUME=plane-minio-data  # Not needed when using DO Spaces/AWS S3
+
+# ==============================================================================
+# Networking
+# ==============================================================================
+PLANE_NETWORK=plane-network
+
+# ==============================================================================
+# Backup Configuration (Optional - for future use)
+# ==============================================================================
+BACKUP_DIR=/backups/plane
+BACKUP_RETENTION_DAYS=30
