--- a/deployment/6-services/.env.api
+++ b/deployment/6-services/.env.api
@@ -151,7 +151,7 @@ OPENAI_API_KEY=your-openai-api-key-here
 
 # GPT Model Selection
 # Options: gpt-3.5-turbo, gpt-4, gpt-4-turbo, gpt-4o
-GPT_ENGINE=gpt-4
+GPT_ENGINE=gpt-5-mini
 
 # ==============================================================================
 # ANALYTICS & MONITORING - OPTIONAL
