--- a/nginx/combined-frontend.conf
+++ b/nginx/combined-frontend.conf
@@ -7,10 +7,10 @@
 # - /spaces → Space app
 # ==============================================================================
 
-user nginx;
+# Note: 'user' directive removed for container compatibility (Nixpacks)
 worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+error_log /dev/stderr warn;
+pid /tmp/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -27,7 +27,7 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+    access_log /dev/stdout main;
 
     # Performance optimizations
     sendfile on;
