feat: introduce a full local Docker Compose development environment and inline Nginx MIME type definitions.

--- a/nginx/combined-frontend.conf
+++ b/nginx/combined-frontend.conf
@@ -19,7 +19,47 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
+    # Inline MIME types for Nixpacks compatibility (no /etc/nginx/mime.types)
+    types {
+        text/html                             html htm shtml;
+        text/css                              css;
+        text/xml                              xml;
+        text/plain                            txt;
+        text/javascript                       js mjs;
+
+        application/javascript                js;
+        application/json                      json;
+        application/xml                       xml;
+        application/pdf                       pdf;
+        application/zip                       zip;
+        application/gzip                      gz;
+        application/x-tar                     tar;
+        application/wasm                      wasm;
+
+        image/gif                             gif;
+        image/jpeg                            jpeg jpg;
+        image/png                             png;
+        image/svg+xml                         svg svgz;
+        image/webp                            webp;
+        image/x-icon                          ico;
+        image/avif                            avif;
+
+        font/woff                             woff;
+        font/woff2                            woff2;
+        font/ttf                              ttf;
+        font/otf                              otf;
+        application/vnd.ms-fontobject         eot;
+
+        audio/mpeg                            mp3;
+        audio/ogg                             ogg;
+        audio/wav                             wav;
+
+        video/mp4                             mp4;
+        video/webm                            webm;
+        video/ogg                             ogv;
+
+        application/manifest+json             webmanifest;
+    }
     default_type application/octet-stream;
 
     # Logging
