--- a/nginx/combined-frontend.conf
+++ b/nginx/combined-frontend.conf
@@ -19,6 +19,13 @@ events {
 }
 
 http {
+    # Temp directories for container compatibility (writable /tmp)
+    client_body_temp_path /tmp/nginx_client_body;
+    proxy_temp_path /tmp/nginx_proxy;
+    fastcgi_temp_path /tmp/nginx_fastcgi;
+    uwsgi_temp_path /tmp/nginx_uwsgi;
+    scgi_temp_path /tmp/nginx_scgi;
+
     # Inline MIME types for Nixpacks compatibility (no /etc/nginx/mime.types)
     types {
         text/html                             html htm shtml;
@@ -132,6 +139,10 @@ http {
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header Referrer-Policy "strict-origin-when-cross-origin" always;
             access_log off;
 
             # Try all three app directories
@@ -171,10 +182,14 @@ http {
             root /var/www/web;
             try_files $uri $uri/ /index.html;
 
-            # Disable caching for HTML files
+            # Disable caching for HTML files (include security headers to avoid override)
             location ~* \.html$ {
                 expires -1;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-Content-Type-Options "nosniff" always;
+                add_header X-XSS-Protection "1; mode=block" always;
+                add_header Referrer-Policy "strict-origin-when-cross-origin" always;
             }
         }
 
