feat: introduce combined frontend deployment with Docker, Nginx, and Docker Compose.

--- a/nginx/docker-frontend.conf
+++ b/nginx/docker-frontend.conf
@@ -1,70 +1,25 @@
 # ==============================================================================
-# Nginx Configuration for Plane Frontend (Web + Admin + Space)
+# Nginx Configuration for Plane Frontend (Docker Deployment)
 # ==============================================================================
 # This configuration serves all frontend applications with proper routing:
-# - / → Web app (main application)
-# - /god-mode → Admin app
-# - /spaces → Space app
+# - / -> Web app (main application)
+# - /god-mode -> Admin app
+# - /spaces -> Space app
+#
+# For use with: Dockerfile.frontend + docker-compose.frontend.yml
 # ==============================================================================
 
-# Note: 'user' directive removed for container compatibility (Nixpacks)
 worker_processes auto;
-error_log /dev/stderr warn;
-pid /tmp/nginx.pid;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
-    use epoll;
     multi_accept on;
 }
 
 http {
-    # Temp directories for container compatibility (writable /tmp)
-    client_body_temp_path /tmp/nginx_client_body;
-    proxy_temp_path /tmp/nginx_proxy;
-    fastcgi_temp_path /tmp/nginx_fastcgi;
-    uwsgi_temp_path /tmp/nginx_uwsgi;
-    scgi_temp_path /tmp/nginx_scgi;
-
-    # Inline MIME types for Nixpacks compatibility (no /etc/nginx/mime.types)
-    types {
-        text/html                             html htm shtml;
-        text/css                              css;
-        text/plain                            txt;
-        text/javascript                       js mjs;
-
-        application/json                      json;
-        application/xml                       xml;
-        application/pdf                       pdf;
-        application/zip                       zip;
-        application/gzip                      gz;
-        application/x-tar                     tar;
-        application/wasm                      wasm;
-
-        image/gif                             gif;
-        image/jpeg                            jpeg jpg;
-        image/png                             png;
-        image/svg+xml                         svg svgz;
-        image/webp                            webp;
-        image/x-icon                          ico;
-        image/avif                            avif;
-
-        font/woff                             woff;
-        font/woff2                            woff2;
-        font/ttf                              ttf;
-        font/otf                              otf;
-        application/vnd.ms-fontobject         eot;
-
-        audio/mpeg                            mp3;
-        audio/ogg                             ogg;
-        audio/wav                             wav;
-
-        video/mp4                             mp4;
-        video/webm                            webm;
-        video/ogg                             ogv;
-
-        application/manifest+json             webmanifest;
-    }
+    include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
     # Logging
@@ -72,7 +27,7 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /dev/stdout main;
+    access_log /var/log/nginx/access.log main;
 
     # Performance optimizations
     sendfile on;
