feat: Add Dockerfile, Nginx configuration, and Docker Compose files for a combined frontend serving web, admin, and space applications.

--- a/nginx/docker-frontend.conf
+++ b/nginx/docker-frontend.conf
@@ -105,27 +105,41 @@ http {
         # ========================================================================
         # Admin App (/god-mode)
         # ========================================================================
-        location /god-mode {
+        location ^~ /god-mode {
             alias /var/www/admin;
-            try_files $uri $uri/ /admin/index.html;
+            index index.html;
 
-            # SPA routing: all requests should go to index.html
-            location ~ ^/god-mode/(.*)$ {
-                try_files /admin/$1 /admin/$1/ /admin/index.html;
+            # Handle exact /god-mode request
+            if ($uri = /god-mode) {
+                rewrite ^ /god-mode/ permanent;
             }
+
+            # SPA fallback - try file, then directory, then index.html
+            try_files $uri $uri/ @admin_fallback;
+        }
+        location @admin_fallback {
+            root /var/www;
+            rewrite ^ /admin/index.html break;
         }
 
         # ========================================================================
         # Space App (/spaces)
         # ========================================================================
-        location /spaces {
+        location ^~ /spaces {
             alias /var/www/space;
-            try_files $uri $uri/ /space/index.html;
+            index index.html;
 
-            # SPA routing: all requests should go to index.html
-            location ~ ^/spaces/(.*)$ {
-                try_files /space/$1 /space/$1/ /space/index.html;
+            # Handle exact /spaces request
+            if ($uri = /spaces) {
+                rewrite ^ /spaces/ permanent;
             }
+
+            # SPA fallback - try file, then directory, then index.html
+            try_files $uri $uri/ @space_fallback;
+        }
+        location @space_fallback {
+            root /var/www;
+            rewrite ^ /space/index.html break;
         }
 
         # ========================================================================
